--- a/tests/sparc/Cargo.toml
+++ b/tests/sparc/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sparc-test"
 version = "0.0.0"
 edition = "2021"
-rust-version = "1.64" # Prevent clippy from suggesting a code that requires a new version.
+rust-version = "1.74" # Prevent clippy from suggesting a code that requires a new version.
 publish = false
 
 [dependencies]
@@ -29,7 +29,7 @@ unexpected_cfgs = { level = "warn", check-cfg = [
 ] }
 # unnameable_types = "warn"
 # unreachable_pub = "warn"
-# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 merged in Rust 1.65 is not available on MSRV
+unsafe_op_in_unsafe_fn = "warn"
 [workspace.lints.clippy]
 all = "warn" # Downgrade deny-by-default lints
 pedantic = "warn"
