ci: Test x86_32 & Armv{7,8} with Valgrind

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,34 @@ jobs:
             target: x86_64-pc-windows-msvc
             os: windows-latest
           # ------------------------------------------------------------
+          # i586-unknown-linux-gnu
+          - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
+            target: i586-unknown-linux-gnu
+          # - rust: '1.81' # LLVM 18
+          #   target: i586-unknown-linux-gnu
+          # - rust: '1.86' # LLVM 19
+          #   target: i586-unknown-linux-gnu
+          - rust: stable
+            target: i586-unknown-linux-gnu
+          # - rust: beta
+          #   target: i586-unknown-linux-gnu
+          - rust: nightly
+            target: i586-unknown-linux-gnu
+          # ------------------------------------------------------------
+          # i686-unknown-linux-gnu
+          - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
+            target: i686-unknown-linux-gnu
+          # - rust: '1.81' # LLVM 18
+          #   target: i686-unknown-linux-gnu
+          # - rust: '1.86' # LLVM 19
+          #   target: i686-unknown-linux-gnu
+          - rust: stable
+            target: i686-unknown-linux-gnu
+          # - rust: beta
+          #   target: i686-unknown-linux-gnu
+          - rust: nightly
+            target: i686-unknown-linux-gnu
+          # ------------------------------------------------------------
           # aarch64-unknown-linux-gnu
           - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
             target: aarch64-unknown-linux-gnu
@@ -244,34 +272,6 @@ jobs:
           - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
             target: armeb-unknown-linux-gnueabi
             os: ubuntu-22.04
-          # ------------------------------------------------------------
-          # i586-unknown-linux-gnu
-          - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
-            target: i586-unknown-linux-gnu
-          # - rust: '1.81' # LLVM 18
-          #   target: i586-unknown-linux-gnu
-          # - rust: '1.86' # LLVM 19
-          #   target: i586-unknown-linux-gnu
-          - rust: stable
-            target: i586-unknown-linux-gnu
-          # - rust: beta
-          #   target: i586-unknown-linux-gnu
-          - rust: nightly
-            target: i586-unknown-linux-gnu
-          # ------------------------------------------------------------
-          # i686-unknown-linux-gnu
-          - rust: '1.74' # LLVM 17 (oldest version that MaybeUninit register is supported)
-            target: i686-unknown-linux-gnu
-          # - rust: '1.81' # LLVM 18
-          #   target: i686-unknown-linux-gnu
-          # - rust: '1.86' # LLVM 19
-          #   target: i686-unknown-linux-gnu
-          - rust: stable
-            target: i686-unknown-linux-gnu
-          # - rust: beta
-          #   target: i686-unknown-linux-gnu
-          - rust: nightly
-            target: i686-unknown-linux-gnu
           # ------------------------------------------------------------
           # hexagon-unknown-linux-musl
           - rust: nightly-2024-11-29 # Rust 1.85, LLVM 19 (oldest version we can use asm_experimental_arch on this target)
@@ -552,8 +552,8 @@ jobs:
       # x86 -x87
       - run: tools/test.sh -vv --tests ${TARGET:-} ${BUILD_STD:-} ${RELEASE:-}
         env:
-          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+soft-float,-x87,-mmx
-          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+soft-float,-x87,-mmx
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg atomic_maybe_uninit_test_prefer_cmpxchg8b_over_x87
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg atomic_maybe_uninit_test_prefer_cmpxchg8b_over_x87
         if: startsWith(matrix.target, 'i586')
       # aarch64 +lse
       # macOS is skipped because it is +rcpc,+lse,+lse2 by default
@@ -787,36 +787,76 @@ jobs:
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
+          - target: i686-unknown-linux-gnu
+            dpkg-arch: i386
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-24.04-arm
+          - target: armv7-unknown-linux-gnueabihf
+            os: ubuntu-24.04-arm
+            dpkg-arch: armhf
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     timeout-minutes: 60
     steps:
       - uses: taiki-e/checkout-action@v1
       - uses: taiki-e/github-actions/install-rust@nightly
-      - run: |
+      - id: prepare
+        run: |
           if [[ "${{ matrix.target }}" == '' ]]; then
             printf 'matrix.target must be set\n'
             exit 1
           fi
           host="$(rustc -vV | grep -E '^host:' | cut -d' ' -f2)"
           if [[ "${host}" != "${{ matrix.target }}" ]]; then
-            printf 'matrix.target must be the same as host\n'
-            exit 1
+            printf '%s\n' "TARGET=--target=${{ matrix.target }}" >>"${GITHUB_ENV}"
+            printf '%s\n' "target-not-host=true" >>"${GITHUB_OUTPUT}"
           fi
       # - run: sudo apt-get -o Acquire::Retries=10 -qq update && sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends moreutils
+      - uses: taiki-e/setup-cross-toolchain-action@v1
+        with:
+          target: ${{ matrix.target }}
+        if: steps.prepare.outputs.target-not-host == 'true'
       - uses: taiki-e/install-action@valgrind
-      - run: tools/test.sh valgrind -vv
+        if: startsWith(matrix.target, 'x86_64') || startsWith(matrix.target, 'aarch64')
+      - run: |
+          sudo dpkg --add-architecture "${{ matrix.dpkg-arch }}"
+          sudo apt-get -o Acquire::Retries=10 -qq update
+          sudo apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends valgrind:"${{ matrix.dpkg-arch }}"
+        if: startsWith(matrix.target, 'i686') || startsWith(matrix.target, 'armv7') || startsWith(matrix.target, 'thumbv7')
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
       # x86_64 +cmpxchg16b
-      - run: tools/test.sh valgrind -vv
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+cmpxchg16b
           RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+cmpxchg16b
         if: startsWith(matrix.target, 'x86_64')
+      # x86 -sse2
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=-sse2
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=-sse2
+        if: startsWith(matrix.target, 'i686')
+      # x86 -sse
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg atomic_maybe_uninit_test_prefer_x87_over_sse
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg atomic_maybe_uninit_test_prefer_x87_over_sse
+        if: startsWith(matrix.target, 'i686')
+      # x86 -x87
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} --cfg atomic_maybe_uninit_test_prefer_x87_over_sse --cfg atomic_maybe_uninit_test_prefer_cmpxchg8b_over_x87
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg atomic_maybe_uninit_test_prefer_x87_over_sse --cfg atomic_maybe_uninit_test_prefer_cmpxchg8b_over_x87
+        if: startsWith(matrix.target, 'i686')
       # aarch64 +lse
       # As of Valgrind 3.19, Valgrind supports atomic instructions of Armv8.0 and Armv8.1 (FEAT_LSE).
-      - run: tools/test.sh valgrind -vv
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
         env:
           RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+lse
           RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+lse
         if: startsWith(matrix.target, 'aarch64')
+      # arm v8 little endian
+      - run: tools/test.sh valgrind -vv ${TARGET:-}
+        env:
+          RUSTDOCFLAGS: ${{ env.RUSTDOCFLAGS }} -C target-feature=+v8
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} -C target-feature=+v8
+        if: startsWith(matrix.target, 'armv7') || startsWith(matrix.target, 'thumbv7')
