--- a/tests/sparc/rust-toolchain.toml
+++ b/tests/sparc/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "nightly-2025-02-17" # TODO: "rustc-LLVM ERROR: Not supported instr: <MCInst 11 <MCOperand Reg:160>>" with LLVM 20
+channel = "nightly-2025-02-17" # TODO: "rustc-LLVM ERROR: Not supported instr: <MCInst 11 <MCOperand Reg:160>>" with LLVM 20-21
 components = ["rust-src"]
 profile = "minimal"
