--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -830,32 +830,22 @@ jobs:
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
+            dpkg-arch: amd64
           - target: i686-unknown-linux-gnu
             dpkg-arch: i386
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-24.04-arm
+            dpkg-arch: arm64
           - target: armv7-unknown-linux-gnueabihf
             os: ubuntu-24.04-arm
             dpkg-arch: armhf
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     timeout-minutes: 60
     container:
-      image: ubuntu:devel
+      image: ghcr.io/taiki-e/valgrind:ubuntu-devel-${{ matrix.dpkg-arch }}
       options: --privileged
     steps:
       - uses: taiki-e/checkout-action@v1
-      - run: |
-          dpkg_arch="${{ matrix.dpkg-arch }}"
-          if [[ -n "${dpkg_arch}" ]]; then
-            dpkg --add-architecture "${dpkg_arch}"
-          fi
-          apt-get -o Acquire::Retries=10 -qq update
-          apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends \
-            ca-certificates \
-            curl \
-            gcc \
-            libc6-dev \
-            valgrind"${dpkg_arch:+":${dpkg_arch}"}"
       - uses: taiki-e/github-actions/install-rust@nightly
       - id: prepare
         run: |
@@ -937,7 +927,7 @@ jobs:
           RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg atomic_maybe_uninit_test_prefer_kuser_cmpxchg --cfg atomic_maybe_uninit_test_prefer_bx
         if: startsWith(matrix.target, 'armv7') || startsWith(matrix.target, 'thumbv7')
 
-  valgrind-other:
+  valgrind-cross:
     needs: tidy
     name: valgrind (${{ matrix.target }})
     strategy:
@@ -946,14 +936,12 @@ jobs:
         include:
           - target: powerpc64le-unknown-linux-gnu
             dpkg-arch: ppc64el
-            arch: ppc64le
+            docker-arch: ppc64le
           - target: riscv64gc-unknown-linux-gnu
             dpkg-arch: riscv64
-            arch: riscv64
-            distro: ubuntu_rolling # TODO: "unhandled instruction 0x0C0777D7" error on ubuntu_devel (25.10)
+            distro: ubuntu-rolling # TODO: "unhandled instruction 0x0C0777D7" error on ubuntu devel (25.10)
           - target: s390x-unknown-linux-gnu
             dpkg-arch: s390x
-            arch: s390x
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -1034,21 +1022,10 @@ jobs:
           esac
       - uses: uraimo/run-on-arch-action@v3
         with:
-          arch: ${{ matrix.arch }}
-          distro: ${{ matrix.distro || 'ubuntu_devel' }}
+          arch: none
+          distro: none
+          base_image: --platform=linux/${{ matrix.docker-arch || matrix.dpkg-arch }} ghcr.io/taiki-e/valgrind:${{ matrix.distro || 'ubuntu-devel' }}-${{ matrix.dpkg-arch }}-cross
           shell: /bin/bash
-          install: |
-            set -CeEuxo pipefail
-            apt-get -o Acquire::Retries=10 -qq update
-            if [[ "${{ matrix.target }}" == "riscv64"* ]]; then
-              apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends ca-certificates curl libc6-dbg
-              # https://bugs.launchpad.net/ubuntu/+source/valgrind/+bug/2120873
-              curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-all-errors -o valgrind-riscv64.deb https://launchpad.net/~jchittum/+archive/ubuntu/valgrind-riscv-2120873/+build/31091443/+files/valgrind_3.25.1-0ubuntu2~ppa1_riscv64.deb
-              dpkg -i valgrind-riscv64.deb
-              rm -- valgrind-riscv64.deb
-            else
-              apt-get -o Acquire::Retries=10 -o Dpkg::Use-Pty=0 install -y --no-install-recommends valgrind
-            fi
           run: |
             set -CeEuxo pipefail
             export RUST_BACKTRACE=1
