--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "atomic-maybe-uninit"
 version = "0.3.10" #publish:version
 edition = "2021"
+# NB: Sync with rust-version field in other Cargo.toml files and msrv badge in README.md
 rust-version = "1.74" # For MaybeUninit registers in asm!: https://github.com/rust-lang/rust/pull/114790
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/taiki-e/atomic-maybe-uninit"
