tests: Rename tests/m68k to tests/no-std-linux

--- a/tests/no-std-linux/Cargo.toml
+++ b/tests/no-std-linux/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "m68k-test"
+name = "no-std-linux-test"
 version = "0.0.0"
 edition = "2021"
 rust-version = "1.74" # Prevent clippy from suggesting a code that requires a new version.
