--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -526,10 +526,10 @@ jobs:
       - run: printf '%s\n' "RUSTFLAGS=${RUSTFLAGS} -D linker_messages" >>"${GITHUB_ENV}"
         # TODO(macos): error: linker stderr: ld: ignoring duplicate libraries: '-lc', '-lm'
         if: matrix.rust == 'nightly' && !contains(matrix.target, '-darwin')
-      # TODO: LLVM bug: Undefined temporary symbol error when building std.
-      - name: Workaround for LLVM bug about MIPS32
+      # Old LLVM bug: Undefined temporary symbol error when building std.
+      - name: Workaround for old LLVM bug about MIPS32
         run: printf 'RELEASE=--release\n' >>"${GITHUB_ENV}"
-        if: startsWith(matrix.target, 'mips-') || startsWith(matrix.target, 'mipsel-')
+        if: (startsWith(matrix.target, 'mips-') || startsWith(matrix.target, 'mipsel-')) && matrix.rust == 'nightly-2023-08-24'
 
       - run: tools/test.sh -vv ${TARGET:-} ${DOCTEST_XCOMPILE:-} ${BUILD_STD:-} ${RELEASE:-}
       # We test doctest only once with the default build conditions because doctest is slow.
