--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,17 +5,15 @@ updates:
       - /
       # crates with [workspace] table are not recognized by the above 'directory: /'
       - /tests/avr
-      # - /tests/m68k # This has a path dependency on a crate that does not exist at checkout that is initialized by the script.
       - /tests/msp430
+      - /tests/no-std-linux
       - /tests/no-std-qemu
+      - /tests/sparc
       - /tests/xtensa
     schedule:
       interval: daily
     commit-message:
       prefix: ''
-    ignore:
-      # For test on old rustc.
-      - dependency-name: libc
     labels: []
   - package-ecosystem: github-actions
     directory: /
