--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ doc-scrape-examples = false
 [dev-dependencies]
 fastrand = "2"
 paste = "1"
-quickcheck = { version = "1", default-features = false, git = "https://github.com/taiki-e/quickcheck.git", rev = "83b1d59" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + https://github.com/BurntSushi/quickcheck/pull/296 + f16/f128 support + lower MSRV
+quickcheck = { version = "1", default-features = false, git = "https://github.com/taiki-e/quickcheck.git", rev = "f0c7237" } # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + https://github.com/BurntSushi/quickcheck/pull/296 + rand -> fastrand + lower MSRV
 
 [target.'cfg(valgrind)'.dev-dependencies]
 crabgrind = "0.1"
